# cryptocurrency-research-platform

./: .gitignore  README.md  clean.sh  main.py  pyproject.toml  requirements.txt
app/: streamlit_app.py
documentation/: README+.md
src/: __init__.py
src/pipeline/: __init__.py  backtester.py  data_pipeline.py  feature_engineer.py  metrics.py  portfolio.py  predictor.py  signal_strategy.py  signal_utils.py  target_engineer.py
streamlit/: app.py
